@@ -1,4 +1,7 @@
 Changelog for Plack::Util::Load
 
+{{$NEXT}}
+  - extended example
+
 0.1  2015-02-05 12:56:25 CEST
   - inital release
